fix: overflow visibility
add auto setting on x axis

--- a/src/app/features/issue-creator/issue-creator.component.scss
+++ b/src/app/features/issue-creator/issue-creator.component.scss
@@ -19,7 +19,8 @@
 
 .main-container {
   height: calc(100vh - 144px);
-  overflow: scroll;
+  overflow-x: auto;
+  overflow-y: scroll;
   padding-right: 1rem;
 }
 
