--- a/src/app/features/issue-preview/issue-preview.component.scss
+++ b/src/app/features/issue-preview/issue-preview.component.scss
@@ -1,7 +1,8 @@
 :host {
   display: block;
   height: calc(100vh - 80px);
-  overflow: scroll;
+  overflow-x: auto;
+  overflow-y: scroll;
 }
 
 .preview-container {
